# graphics-lib

./: Cargo.toml  README.md  proposal.md  shell.nix
src/: .main.rs.swp  camera.rs  frag.frag  lib.rs  lighting.frag  main.rs  object.rs  program.rs  scene_graph.rs  scratch.tx  utils.rs  vert.vert
src/shaders/: .shadow_dbg.frag.swp  shadow.frag  shadow.vert  shadow_dbg.frag  shadow_dbg.vert  texture_dbg.frag  texture_dbg.vert
